--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,36 @@
 {
   "compilerOptions": {
+    /* Module/Target Options */
+    "target": "esnext",
     "module": "commonjs",
-    "target": "es5",
-    "sourceMap": true,
+
+    "declaration": true,
+    "outDir": "./lib",
+    "declarationDir": "./typings",
+
+    /* Strict Type-Checking Options */
+    "alwaysStrict": true,
+    "noImplicitAny": true,
+    "suppressImplicitAnyIndexErrors": true,
+
+    /* Basic Options */
+    "importHelpers": true,
+
+    /* Extra Options */
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "noImplicitAny": true
+
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+
+    "rootDir": "./src",
+    "baseUrl": ".",
   },
+  "include": [
+    "src"
+  ],
   "exclude": [
-    "node_modules",
-    "spec"
+    "lib/**",
+    "node_modules/**",
   ]
 }
