--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
   "name": "json-typescript-mapper",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
-  "files": ["lib/**/*", "typings/**/*"],
+  "files": [
+    "lib/**/*",
+    "typings/**/*"
+  ],
   "dependencies": {
     "reflect-metadata": "^0.1.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/jest": "^24.0.11",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^24.9.1",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^5.16.0",
-    "jest": "^24.7.1",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.4.5"
+    "jest": "^24.9.0",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "test": "jest --verbose=false",
@@ -133,7 +136,7 @@
     "api-adapter"
   ],
   "author": "Ailun She, Brian Choi, David Katz",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/dhkatz/json-typescript-mapper/issues"
   },
