--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     /* Module/Target Options */
-    "target": "es2015",
+    "target": "es6",
     "module": "commonjs",
+    "lib": ["es2019"],
 
     "declaration": true,
     "outDir": "./lib",
@@ -23,7 +24,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
 
-    "rootDir": "./src",
+    "rootDir": ".",
     "baseUrl": "."
   },
   "include": [
