--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dhkatz/json-ts",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "Transform JSON objects into TypeScript classes.",
   "keywords": [
     "json-mapper",
@@ -25,7 +25,7 @@
     "url": "git+https://github.com/dhkatz/json-ts.git"
   },
   "main": "lib/index.js",
-  "types": "typings/index.d.ts",
+  "types": "typings/src/index.d.ts",
   "files": [
     "lib/**/*",
     "typings/**/*"
