--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dhkatz/json-ts",
-  "version": "4.2.1",
+  "version": "4.3.0",
   "description": "Transform JSON objects into TypeScript classes.",
   "keywords": [
     "json-mapper",
@@ -25,7 +25,7 @@
     "url": "git+https://github.com/dhkatz/json-ts.git"
   },
   "main": "lib/index.js",
-  "types": "typings/src/index.d.ts",
+  "types": "typings/index.d.ts",
   "files": [
     "lib/**/*",
     "typings/**/*",
@@ -35,19 +35,13 @@
     "reflect-metadata": "^0.1.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.14",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.11.0",
     "jest": "^26.4.2",
-    "ts-node": "^9.0.0",
+    "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
@@ -55,54 +49,8 @@
     "lint": "eslint src/**/* && tsc --noEmit",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "build:js": "tsc",
     "prepublish": "npm run build"
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/env",
-        {
-          "useBuiltIns": "entry",
-          "corejs": "3"
-        }
-      ],
-      "@babel/typescript"
-    ],
-    "plugins": [
-      [
-        "@babel/plugin-proposal-decorators",
-        {
-          "legacy": true
-        }
-      ],
-      [
-        "@babel/proposal-class-properties",
-        {
-          "loose": true
-        }
-      ],
-      "@babel/proposal-object-rest-spread"
-    ],
-    "sourceMaps": "inline"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/test"
-    ],
-    "testRegex": "(/test/.*|(\\.|/)(test|spec))\\.(tsx?)$",
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/common/"
-    ],
-    "testEnvironment": "node",
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    },
-    "collectCoverageFrom": [
-      "!<rootDir>/src/util/**/*",
-      "<rootDir>/src/**/*.{ts,tsx}"
-    ]
   },
   "prettier": {
     "singleQuote": true,
@@ -125,37 +73,39 @@
     ],
     "extends": [
       "eslint:recommended",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "prettier",
+      "prettier/@typescript-eslint"
     ],
     "rules": {
-      "semi": [
-        "error",
-        "always"
-      ],
       "no-dupe-class-members": "off",
-      "@typescript-eslint/indent": [
-        "error",
-        2
-      ],
       "@typescript-eslint/no-explicit-any": 0,
-      "@typescript-eslint/array-type": [
-        "error",
-        "array-simple"
-      ],
-      "@typescript-eslint/explicit-function-return-type": [
-        "error",
-        {
-          "allowExpressions": true
-        }
-      ],
+      "@typescript-eslint/explicit-function-return-type": 0,
+      "@typescript-eslint/interface-name-prefix": 0,
+      "@typescript-eslint/no-parameter-properties": 0,
+      "@typescript-eslint/no-non-null-assertion": 0,
       "@typescript-eslint/no-use-before-define": [
         "error",
         {
           "functions": false
         }
-      ],
-      "@typescript-eslint/interface-name-prefix": 0,
-      "@typescript-eslint/no-parameter-properties": 0
+      ]
     }
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/test"
+    ],
+    "testRegex": "(/test/.*|(\\.|/)(test|spec))\\.(tsx?)$",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/common/"
+    ],
+    "collectCoverageFrom": [
+      "!<rootDir>/src/**/util.{ts,tsx}",
+      "<rootDir>/src/**/*.{ts,tsx}"
+    ]
   }
 }
